idencomp-macros/tests/ui/model-nonexistent-item.stderr
error: expected `dummy`, `generic`, or `light`
  --> tests/ui/model-nonexistent-item.rs:27:5
   |
27 |     nonexistent(4, 0, 0),
   |     ^^^^^^^^^^^
